# schiphol-airport-project

./: .env-example  pyproject.toml
airport-etl/airport-etl/: constraints.py  extract.py
