[project]
name = "schiphol-airport-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonny Ribeiro",email = "jaribeiro32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb (>=0.13.13,<0.14.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
